= RubyMotion 2.36 =

  * Added ARM64 support (64-bit) for iOS. It is not yet enabled by default,
    in order to do so, add the following line to your project's Rakefile:
    app.archs['iPhoneOS'] |= ['arm64']
  * [Vendor] Fixed a bug where Xcode 6 would cache precompiled headers in a
    hidden location and subsequent builds could fail after cleaning.
  * [Vendor] Fixed a bug where a failed build could cause subsequent builds to
    never actually start.
  * [Vendor] Removed Xcode 6 noise from build output.
  * [iOS] Fixed a bug where it could not configure `app.provisioning_profile'
    in Rakefile in App Extensions.
  * Fixed a bug where it could not include #supportedInterfaceOrientations
    method properly.
  * Fixed a race condition bug in the runtime where a crash would occur if
    the same Objective-C constant was being resolved at the same time from
    different threads.
  * Fixed the `motion changelog' command to honor the `--pre' flag, which will
    open the pre-release NEWS file instead.
  * Fixed the `motion update --pre' command to print a reference to the
    `motion changelog --pre' command.
  * Improved IO#.read performance which read from files. ~4 times faster.

= RubyMotion 2.35 =

  * Added support for iOS 8.1 (beta). You will need to install Xcode 6.1 GM
    Seed in order to target it.
  * Fixed a bug that could occur when the only available SDKs are newer than the
    available BridgeSupport metadata.
  * [iOS] Fixed a bug where it would not symbolicate with `rake profile:device`.
    The dSYM file path was changed to fix a bug.
  * [iOS] Fixed a bug where the RubyMotion shared framework would not update
    even if it changed the code in framework.
  * [OSX] Fixed a bug that would always cause the REPL to crash.
  * Fixed a bug where GLKit functions would trigger a crash when it will run
    app on iOS simulator.

= RubyMotion 2.34 =

  * All iOS and OS X versions of the runtime have been recompiled with Xcode 6.